--- a/Develop/index.html
+++ b/Develop/index.html
@@ -36,7 +36,7 @@
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./images/online-reputation-management.jpg" class="float-right" 
+            <img src="../images/online-reputation-management.jpg" class="float-right" 
             alt="Online Reputation Management"/>
             <h2>Online Reputation Management</h2>
             <p>
@@ -44,7 +44,7 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./images/social-media-marketing.jpg" class="float-left"
+            <img src="../images/social-media-marketing.jpg" class="float-left"
             alt="Social Media Marketing" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -55,7 +55,7 @@
     <section class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./images/lead-generation.png" 
+            <img src="../images/lead-generation.png" 
             alt="Lead Generation "/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
@@ -63,7 +63,7 @@
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./images/brand-awareness.png" 
+            <img src="../images/brand-awareness.png" 
             alt="Brand Awareness"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -71,7 +71,7 @@
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./images/cost-management.png"
+            <img src="../images/cost-management.png"
             alt="Cost Management"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
