adjusted file path for images

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -27,7 +27,7 @@
     <div class="hero"></div>
     <section class="content">
         <div class="search-engine-optimization">
-            <img src="./images/search-engine-optimization.jpg" class="float-left"
+            <img src="../images/search-engine-optimization.jpg" class="float-left"
             alt="Search Engine Optimization" />
             
             <h2>Search Engine Optimization</h2>
